# Food-Delivery-Analysis

./: .gitignore  README.md  pyproject.toml
data/processed/: tableau_customer_experience_clean.csv  tableau_executive_summary_clean.csv  tableau_geographic_intelligence_clean.csv  tableau_restaurant_performance_clean.csv
docs/: dashboard_structure.md
notebooks/: food_data_analysis.ipynb
output/tableau/: EXPORT_GUIDE.md
scripts/: build_tableau_data.py
src/food_delivery_analysis/: __init__.py  aggregations.py  config.py  features.py  io_utils.py  pipeline.py
tableau/workbook/: food.twb
